--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
                     <h3 class="section-title">Our Featured Flowers</h3>
                     <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
               <div class="feature-flower-container">
-                
+                <div class="feature-flower-info">
+                    <div class="feature-image1"></div>
+                    <div class="feature-image-description">Pink Flower Tree</div>
+                </div>
+                <div class="feature-flower-info">
+                    <div class="feature-image2"></div>
+                    <div class="feature-image-description">Pink Flower Tree</div>
+                </div>
+                <div class="feature-flower-info">
+                    <div class="feature-image3"></div>
+                    <div class="feature-image-description">Pink Flower Tree</div>
+                </div>
               </div>
                
 
