--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
 
 
             </section>
+            <section class="support-section">
+                <div class="support-section-container">
+                <div class="support-section-info">
+                    <img src="image/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="support-section-info">
+                    <img src="image/Group 58.png" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="support-section-info">
+                    <img src="image/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
