special offer updated

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                 </div>
                 </div>
             </section>
+            <section  class="special-offer">
+                <div class="special-offer-container">
+                    <div class="special-offer-info">
+                        <h3 class="special-offer-title" >Hot Deal ! Sale Up To 25% <span style="color: #E55473;">off</span></h3>
+                        <p class="special-offer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="btn-primary btn-align">Sign Up</button>
+                    </div>
+                    <img src="image/pngwing 8.png" alt="">
+                </div>
+            </section>
         </main>
     </body>
 </html>
