--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
                     <img src="image/pngwing 8.png" alt="">
                 </div>
             </section>
+            <section class="social-image">
+                <h3 class="section-title">instagram</h3>
+                    <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <div class="social-image-container">
+                        <div >
+                            <img class="image-cart" src="image/Flower 01.png" alt="" >
+                        </div>
+                        <div>
+                            <img  class="image-cart" src="image/Rectangle 4.png" alt="">
+                        </div>
+                        <div>
+                            <img class="image-cart" src="image/Rectangle 5.png" alt="">
+                        </div>
+                        <div >
+                            <img class="image-cart" src="image/Rectangle 6.png" alt="">
+                        </div>
+                    </div>
+            </section>
         </main>
     </body>
 </html>
