--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
                     </div>
             </section>
         </main>
-        <footer>
-            
+        <footer class="footer-section">
+            <div class="footer-content">
+                <h3 class="footer-title">Flower<span style="color: white;">Shop</span></h3>
+                <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="footer-date">@2020-2023, FlowerShop.com. All rights reserved. </p>
+            </div>
         </footer>
     </body>
 </html>
