bonus section added as new image collection

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header class="header">
+       
             <div class="banner">
                 <div class="banner-content">
                     <h3 class="banner-title">Let's make beutiful flowers a part of your life</h3>
@@ -80,6 +81,23 @@
                         </div>
                         <div >
                             <img class="image-cart" src="image/Rectangle 6.png" alt="">
+                        </div>
+                    </div>
+            </section>
+            <section class="new-collection">
+                <h3 class="section-title">view Our New Collection</h3>
+                    <div class="new-image-container">
+                        <div >
+                            <img class="new-image-cart" src="image/african-daisy-removebg-preview.png" alt="" >
+                            <p class="image-name">African Daisy</p>
+                        </div>
+                        <div>
+                            <img  class="new-image-cart" src="image/amaryllis-plant-removebg-preview.png" alt="">
+                            <p class="image-name">Amaryllis-plant</p>
+                        </div>
+                        <div>
+                            <img class="new-image-cart" src="image/bachelor-buttons-removebg-preview.png" alt="">
+                            <p class="image-name"> Amaryllis</p>
                         </div>
                     </div>
             </section>
